tests/compiler/case_exhaustiveness_null_1.kk.out
1
========

========
error:
  ┌─ tests/compiler/case_exhaustiveness_null_1.kk:3:4
  │
3 │   \null => false
  │    ^^^^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.

